--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
-  "name": "weex-ui-test",
+  "name": "weex-ui-app",
   "version": "1.0.0",
-  "description": "weex,weex-ui,vue,vuex",
+  "description": "weex",
   "author": "",
   "private": true,
   "scripts": {
@@ -31,11 +31,13 @@
     "vue": "^2.5.11",
     "vue-router": "^3.0.1",
     "weex-ui": "^0.4.0",
-    "weex-vue-render": "^0.12.26"
+    "weex-vue-render": "^1.0.17"
   },
   "devDependencies": {
+    "autoprefixer": "^8.0.0",
     "babel-core": "^6.26.0",
     "babel-loader": "^7.1.1",
+    "babel-plugin-component": "^1.1.0",
     "babel-preset-stage-0": "^6.24.1",
     "chai": "^4.1.2",
     "css-loader": "^0.28.8",
@@ -48,6 +50,7 @@
     "portfinder": "^1.0.13",
     "postcss-import": "^11.0.0",
     "postcss-loader": "^2.0.9",
+    "postcss-plugin-weex": "^0.1.6",
     "raw-loader": "^0.5.1",
     "rimraf": "^2.6.2",
     "script-ext-html-webpack-plugin": "^1.8.5",
@@ -58,7 +61,8 @@
     "webpack-dev-server": "^2.9.7",
     "webpack-merge": "^4.1.0",
     "webpack-uglify-parallel": "^0.1.4",
-    "weex-loader": "^0.6.7"
+    "weex-loader": "^0.6.7",
+    "weex-vue-precompiler": "^0.1.17"
   },
   "optionalDependencies": {
     "ios-deploy": "^1.9.0"
