--- a/package.json
+++ b/package.json
@@ -30,6 +30,8 @@
     "phantom-limb": "0.0.1",
     "vue": "^2.5.11",
     "vue-router": "^3.0.1",
+    "vuex": "^3.0.1",
+    "vuex-router-sync": "^5.0.0",
     "weex-ui": "^0.4.0",
     "weex-vue-render": "^1.0.17"
   },
